--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
           <button id="PlayButton">Play/Stop</button>
           <button id="MuteButton">Mute/UnMute</button>
+          <!-- <button id="UnMuteButton">UnMute</button> -->
     </main>
 
     
