--- a/index.html
+++ b/index.html
@@ -122,6 +122,6 @@
       
     </ul>
 
-    <script type="module" src="./assests/index.js"></script>
+    <script type="module" src="./assests/index.ts"></script>
 </body>
 </html>
